up to date + wrote instructions in readme
